--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-router": "^3.0.1",
     "express": "^4.16.4",
     "mysql": "^2.16.0",
-    "dotenv": "^6.2.0"
+    "dotenv": "^6.2.0",
+    "bootstrap": "^4.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
