--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.5",
     "bootstrap": "^4.3.1",
     "dotenv": "^6.2.0",
