--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.16.0",
+    "stripe": "^6.31.2",
     "toastr": "^2.1.4",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1"
